<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:scrollbars="vertical"
    android:id="@+id/myFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:scrollbars="vertical">

            <TextView
                android:id="@+id/fdifficolta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/difficolt"
                android:textSize="20dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_facile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_selection"
                    android:onClick="fDifficolta"
                    android:text="@string/facile"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/bt_medio"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_medio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_selection"
                    android:onClick="fDifficolta"
                    android:text="@string/medio"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/bt_difficile"
                    app:layout_constraintStart_toEndOf="@+id/bt_facile"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_difficile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_selection"
                    android:onClick="fDifficolta"
                    android:text="@string/difficile"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/bt_medio"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/ftempo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/tempo"
                android:textSize="20dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_15min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_selection"
                    android:onClick="fTempo"
                    android:text="@string/_15_min"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/bt_30min"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_30min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_selection"
                    android:onClick="fTempo"
                    android:text="@string/_30_min"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/bt_1ora"
                    app:layout_constraintStart_toEndOf="@+id/bt_15min"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_1ora"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_selection"
                    android:onClick="fTempo"
                    android:text="@string/_60_min"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/bt_30min"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/ftipologia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/STRtipologia"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/et_tipologia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/scrivi_una_tipologia"
                android:inputType="text"/>

            <TextView
                android:id="@+id/fportata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/STRportata"
                android:textSize="20dp" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_Antipasto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_selection"
                    android:onClick="fPortata"
                    android:text="@string/antipasto"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toTopOf="@+id/bt_Contorno"
                    app:layout_constraintEnd_toStartOf="@+id/bt_Primo"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="spread" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_Primo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_selection"
                    android:onClick="fPortata"
                    android:text="@string/primo"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toStartOf="@id/bt_Secondo"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toEndOf="@+id/bt_Antipasto"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="spread" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_Secondo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_selection"
                    android:onClick="fPortata"
                    android:text="@string/secondo"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toTopOf="@+id/bt_Dolce"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toEndOf="@+id/bt_Primo"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="spread" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_Contorno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_selection"
                    android:onClick="fPortata"
                    android:text="@string/contorno"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/bt_Dolce"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/bt_Antipasto"
                    app:layout_constraintVertical_chainStyle="spread" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_Dolce"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_selection"
                    android:onClick="fPortata"
                    android:text="@string/dolce"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toEndOf="@+id/bt_Contorno"
                    app:layout_constraintTop_toBottomOf="@+id/bt_Secondo"
                    app:layout_constraintVertical_chainStyle="spread" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/fingrediente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/ingrediente"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/et_ingrediente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/scrivi_un_ingrediente"
                android:inputType="text"
                />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>